--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "glslify": "^7.1.1",
     "gsap": "^3.12.5",
     "lenis": "^1.1.9",
+    "leva": "^0.9.35",
     "next": "14.2.5",
     "next-transition-router": "^0.2.6",
     "react": "^18.3.1",
@@ -31,6 +32,7 @@
     "@types/three": "^0.169.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "lil-gui": "^0.20.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
