Shaders Mix RGB Added🎊💀

--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@theatre/core": "^0.7.2",
     "@theatre/r3f": "^0.7.2",
     "@theatre/studio": "^0.7.2",
+    "glsl-blend": "^1.0.3",
     "glslify": "^7.1.1",
+    "glslify-loader": "^2.0.0",
     "gsap": "^3.12.5",
     "lenis": "^1.1.9",
     "leva": "^0.9.35",
     "next": "14.2.5",
     "next-transition-router": "^0.2.6",
+    "raw-loader": "^4.0.2",
     "react": "^18.3.1",
     "react-dom": "^18",
     "theatre": "^0.2.3",
