--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "^18.3.1",
     "react-dom": "^18",
     "theatre": "^0.2.3",
-    "three": "^0.167.1"
+    "three": "^0.167.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
