--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.119.0",
     "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.5",
     "@theatre/core": "^0.7.2",
     "@theatre/r3f": "^0.7.2",
     "@theatre/studio": "^0.7.2",
@@ -22,6 +23,7 @@
     "leva": "^0.9.35",
     "next": "14.2.5",
     "next-transition-router": "^0.2.6",
+    "r3f-perf": "^7.2.3",
     "raw-loader": "^4.0.2",
     "react": "^18.3.1",
     "react-dom": "^18",
